tests/cases/generics/errors/generic-aggregate-recursive-growth.ari
struct Wrapper[T] {
  value: T,
}

struct Node[T] {
  child: Node[Wrapper[T]],
}

fn main() -> i64 {
  return 0;
}
